# chaiwala

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.ini.sample  config.toml.sample  config_sample.toml
.deploy/: local.dockerfile  remote.dockerfile
.github/workflows/: rust.yml
src/: config.rs  event.rs  handler.rs  lib.rs  logger.rs  webserver.rs
src/handler/: http.rs  mod.rs  ws.rs
src/report/: counter.rs  discord.rs  mod.rs
