[package]
name = "chaiwala"
version = "0.1.2"
edition = "2021"
authors = ["Sho Kaneko <kanekoshoyu@gmail.com>"]
description = "Service Layer for Kucoin Arbitrage, along with Continuous Deployment"
repository = "https://github.com/kanekoshoyu/chaiwala"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kucoin_api = "1.4.10"
kucoin_arbitrage = "0.0.10"
log = "0.4.8"
fern = "0.6.2"
chrono = "0.4"
serenity = "0.11.6"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.20"
axum = { version = "0.6.19", features = ["ws", "headers"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.3"
