[package]
name = "chaiwala"
version = "0.1.3"
edition = "2021"
authors = ["Sho Kaneko <kanekoshoyu@gmail.com>"]
description = "Service Layer for Kucoin Arbitrage, along with Continuous Deployment"
repository = "https://github.com/kanekoshoyu/chaiwala"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kucoin_api = "1.4.10"
kucoin_arbitrage = "0.0.11"
log = "0.4.8"
failure = "0.1.8"
fern = "0.6.2"
chrono = "0.4"
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
serde = "1.0.188"
toml = "0.8.2"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.20"
axum = { version = "0.6.19", features = ["ws", "headers"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.3"
